--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "vite": "^2.0.5"
+    "vite": "^2.5.10"
   },
   "dependencies": {
-    "lit": "^2.0.0-rc.4"
+    "lit": "^2.0.0"
   }
 }
