--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.8",
     "eslint": "^7.32.0",
     "vite": "^2.5.10"
   },
