--- a/package.json
+++ b/package.json
@@ -6,10 +6,23 @@
     "build": "vite build",
     "serve": "vite preview"
   },
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/uv-list.umd.cjs",
+  "module": "./dist/uv-list.js",
+  "exports": {
+    ".": {
+      "import": "./dist/uv-list.js",
+      "require": "./dist/uv-list.umd.cjs"
+    }
+  },
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.9",
     "eslint": "^8.21.0",
-    "vite": "^3.0.5"
+    "prettier": "^2.7.1",
+    "vite": "^3.0.8"
   },
   "dependencies": {
     "lit": "^2.2.8"
