--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vite": "^3.0.8"
   },
   "dependencies": {
-    "lit": "^2.7.5"
+    "lit": "^2.7.5",
+    "lodash.throttle": "^4.1.1"
   }
 }
